<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_scan"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_scan_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_accounts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_accounts"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="256dp"
        android:text="@string/btn_accounts_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_help"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_circular_64dp"
        android:contentDescription="@string/help"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:clickable="false"
        android:focusable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="text"
        android:text="@string/title_lbl"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>